# django_online_store_22

./: README.md  pyproject.toml  requirements.txt
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/fixtures/: moderator_group.json
catalog/management/commands/: add_test_products.py  creategroups.py
catalog/migrations/: 0001_initial.py  0002_product_description.py  0003_product_is_published.py  0004_alter_product_options_product_owner.py  0005_alter_product_options_alter_product_owner.py  0006_alter_product_is_published_alter_product_owner.py  0007_alter_product_owner.py  0008_alter_product_options_alter_product_is_published_and_more.py
catalog/services/: product_service.py
catalog/templates/: base.html  menu.html
catalog/templates/catalog/: home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_unpublish.html  products_by_category.html
config/: settings.py  urls.py
fixtures/: categories.json  products.json
screenshots/: скрин (2).docx
static/css/: styles.css
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_managers_remove_user_username.py  0003_alter_user_managers_alter_user_email.py  0004_alter_user_managers_user_avatar_user_country_and_more.py
users/templates/registration/: login.html  register.html
users/templates/users/: edit_profile.html  (+1 more)
