[tool.poetry]
name = "django-online-store-22"
version = "0.1.0"
description = "Django Online Store Project"
authors = ["Sarason Andrey <sarason@rambler.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
django = ">=5.2.1,<6.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
pillow = ">=11.2.1,<12.0.0"
ipython = ">=9.3.0,<10.0.0"
django-redis = ">=6.0.0,<7.0.0"
python-dotenv = "^1.1.0"
redis = ">=6.2.0,<7.0.0"
click = ">=8.2.1,<9.0.0"
docutils = ">=0.21.2,<0.22.0"
Pygments = ">=2.19.2,<2.20.0"

[tool.poetry.group.dev.dependencies]
black = ">=25.1.0,<26.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

